<resources>
    <string name="app_name">Bloodify</string>
    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Acasa</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_events">Evenimente</string>
    <string name="title_info">Info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beneficii">Beneficii</string>
    <string name="setari">Setari</string>
    <string name="obiecte_pierdute">Obiecte Pierdute</string>
    <string name="qr_code">Cod de identificare</string>
    <string name="email">Email</string>
    <string name="parola">Parola</string>
    <string name="necesitati">Necesitati</string>
    <string name="text_QR">Poti sa folosesti acest cod la evenimente pentru a acumula puncte</string>
    <string name="description_imageQRCode">QR Code</string>
    <string name="info_header1">De ce ai dona sange?</string>
    <string name="info_content1">In urma donarii de sange, rezistenta organismului la socuri creste. De exemplu, daca vei suferi un accident, reactia organismului ii va ajuta pe medici, acesta fiind deja obisnuit cu pierderea de sange si inlocuirea lui. \n\n Donarea de sange este benefica pentru sanatatea donatorului intrucat sangele este improspatat, imunitatea organismului creste, iar riscul de paralizie si accident vascular se reduc cu 30%.</string>
    <string name="info_header2">Cat sange se doneaza?</string>
    <string name="info_content2">La o donare se recolteaza 450 ml de sange, cantitate ce se reface ca volum in cateva ore, celular in 2 saptamani.</string>
    <string name="info_header3">Ce avantaje are un donator?</string>
    <string name="info_content3">1. Orice donator are dreptul sa primeasca, la cerere, un buletin de analiza cu rezultatele testelor efectuate. \n2. Donatorii de sange ce doneaza periodic au dreptul sa efectueze un examen radiologic si unul biologic gratuit, in fiecare an.</string>
    <string name="grupa_sanguina">Grupa sanguina</string>
    <string name="notificari">Vrei sa primesti notificari?</string>
    <string name="sunet">Opreste sunetul notificarilor?</string>
    <string-array name="grupe_array">
        <item>0</item>
        <item>A</item>
        <item>B</item>
        <item>AB</item>
    </string-array>

    <string-array name="semn_array">
        <item>+</item>
        <item>-</item>
    </string-array>

    <string-array name="danu_array">
    <item>DA</item>
    <item>NU</item>
    </string-array>


</resources>
