<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mstb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToolbarActivities.SettingsActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:onClick="launchQRCodeActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_qr_code"
        android:backgroundTint="@color/colorPrimary" />

    <TextView
        android:id="@+id/textGrupa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/grupa_sanguina"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <org.honorato.multistatetogglebutton.MultiStateToggleButton
        android:id="@+id/mstb_grupa"
        android:layout_width="262dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGrupa"
        mstb:mstbPrimaryColor="@color/colorPrimary"
        mstb:mstbSecondaryColor="@color/colorPrimaryDark"
        mstb:values="@array/grupe_array" />

    <org.honorato.multistatetogglebutton.MultiStateToggleButton
        android:id="@+id/mstb_semn"
        android:layout_width="148dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mstb_grupa"
        mstb:mstbPrimaryColor="@color/colorPrimary"
        mstb:mstbSecondaryColor="@color/colorPrimaryDark"
        mstb:values="@array/semn_array" />

    <TextView
        android:id="@+id/textNotificari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/notificari"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mstb_semn" />

    <org.honorato.multistatetogglebutton.MultiStateToggleButton
        android:id="@+id/mstb_notif"
        android:layout_width="148dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSunet"
        mstb:mstbPrimaryColor="@color/colorPrimary"
        mstb:mstbSecondaryColor="@color/colorPrimaryDark"
        mstb:values="@array/danu_array" />

    <TextView
        android:id="@+id/textSunet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/sunet"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mstb_sunet" />

    <org.honorato.multistatetogglebutton.MultiStateToggleButton
        android:id="@+id/mstb_sunet"
        android:layout_width="148dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNotificari"
        mstb:mstbPrimaryColor="@color/colorPrimary"
        mstb:mstbSecondaryColor="@color/colorPrimaryDark"
        mstb:values="@array/danu_array" />




</android.support.constraint.ConstraintLayout>